Add permission revokation
